<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="msg_token_expired">Token expired</string>
    <string name="app_name">appiaries Group Chat</string>
    <string name="msg_logged_in">Logged in!</string>
    <string name="msg_logged_out">Logged out</string>
    <string name="indicator_deleting">Deleting</string>
    <string name="msg_confirm_delete">Delete this post?</string>
    <string name="title_this_is_your_message">This is yours</string>
    <string name="msg_no_results">No Results</string>
    <string name="msg_input_words">Input some words!</string>
    <string name="indicator_loading">Loading</string>
    <string name="indicator_saving">Saving</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_all_users">All Users</string>
    <string name="menu_my_favorites">My Favorite Users</string>
    <string name="menu_my_timeline">My Timeline</string>
    <string name="menu_preference">Preference</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_to_favorites">Add To Favorites</string>
    <string name="menu_remove_from_favorites">Remove From Favorites</string>
    <string name="label_user_name">User Name</string>
    <string name="label_age">Age</string>
    <string name="label_hide_age">Hide My Age</string>
    <string name="menu_user_timeline">User Timeline</string>
    <string name="label_is_in_favorite">Is my favorite</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_post">POST</string>
    <string name="indicator_posting">Posting</string>
    <string name="indicator_searching">Searching</string>

</resources>